# ot-harjoitustyo

./: .env  .env.test  .gitignore  README.md  pyproject.toml
data/: database.sqlite  test-database.sqlite
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md  vaatimuusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
poetry-testi/: pyproject.toml
src/: config.py  index.py  initialize_database.py
src/entities/: user.py  workout.py
src/repositories/: user_repository.py  workout_repository.py
src/services/: app_service.py
src/tests/repositories/: user_repository_test.py  workout_repository_test.py
src/tests/services/: app_service_test.py
src/ui/: login_view.py  logout_view.py  sign_up_view.py  ui.py  workout_diary_view.py
